updated header and (hopefully) fixed participant modal ui on mobile a bit

--- a/src/app/(userLoggedIn)/user-profile/[userID]/user-profile.module.css
+++ b/src/app/(userLoggedIn)/user-profile/[userID]/user-profile.module.css
@@ -72,7 +72,7 @@
     font-size: 3.4rem;
     cursor: pointer;
     transition: var(--hover-transition);
-    z-index: 10;
+    z-index: 8;
 }
 
 .update_profile_pic_btn:hover{
